EXTRA_DIST +=					\
	vapi/config.vapi			\
	vapi/gdesktop-enums-3.0.vapi		\
	vapi/gobject-introspection-1.0.vapi 	\
	vapi/gtksourceview-3.0.deps		\
	vapi/gtksourceview-3.0.vapi		\
	vapi/libpeas-1.0.vapi			\
	vapi/libsoup-2.4.deps			\
	vapi/libsoup-2.4.vapi			\
	vapi/gitg-platform-support.vapi		\
	vapi/gio-windows-2.0.vapi
