install_data(
  '_'.join(['hicolor', 'apps', 'scalable', 'gitg.svg']),
  rename: '@0@.svg'.format(application_id),
  install_dir: join_paths(gitg_datadir, 'icons', 'hicolor', 'scalable', 'apps'),
)

install_data(
  '_'.join(['hicolor', 'apps', 'scalable', 'gitg-symbolic.svg']),
  rename: '@0@-symbolic.svg'.format(application_id),
  install_dir: join_paths(gitg_datadir, 'icons', 'hicolor', 'scalable', 'apps'),
)
